k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flixconvert
  namespace: flixconvert
spec:
  replicas: 4
  selector:
    matchLabels:
      app: flixconvert
  template:
    metadata:
      labels:
        app: flixconvert
    spec:
      containers:
        - name: flixconvert
          image: mukul0412/flixconvert:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8080
