k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flixconvert
  namespace: flixconvert
spec:
  type: ClusterIP
  selector:
    app: flixconvert
  ports:
    - name: http
      port: 80
      targetPort: 8000
